# template

./: .gitignore  Makefile  README.md  custom_dataset_and_dataloaders.ipynb  lint.sh  pyproject.toml  test.sh
.dvc/src/: README.md  main.py
.dvc/src/data/: radar_synthetic.py
.dvc/src/model/: dbscan.py  gmm.py  kmeans.py  linear.py
.dvc/src/utils/: scores.py  visualization.py
.dvc/tests/data/: test_radar_synthetic.py
.dvc/tests/model/: test_dbscan.py  test_hdbscan.py  test_linear.py  test_optics.py
.github/workflows/: tests.yml
data/: clustered_country_data.csv
src/: README.md  config.py  fashionMNIST.py  kmeans_clustering.py  main.py
src/Data/: README.md  fashionMNIST.py
src/data/: Fashion_mnist.py  data_loader.py  fmnist.py  radar_synthetic.py
src/model/: agglomerative.py  dbscan.py  ensemble.py  gmm.py  hdbscan_clusterer.py  kmeans.py  linear.py  optics.py
src/model/ClusteringMethods/: K-means.py
src/model/clustering/: README.md  main.py
src/utils/: scores.py  visualization.py
tests/data/: test_fmnist.py  test_radar_synthetic.py
tests/model/: test_agglomerative.py  test_dbscan.py  test_ensemble.py  test_gmm.py  test_hdbscan.py  test_kmeans.py  test_linear.py  test_optics.py
